--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(kernels)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(kernel_helper kernel_helper.c)
+add_executable(kernel_helper src/kernel_helper.c)
