Seperated executable and library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(kernel_helper)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(kernel_helper src/kernel_helper.c include/kernel_helper.h)
+add_library(kernel_helper STATIC src/kernel_helper.c)
+set_target_properties(kernel_helper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+
+add_executable(convert_kernel src/convert_kernel.c include/convert_kernel.h src/kernel_helper.c include/kernel_helper.h)
+set_target_properties(convert_kernel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
