Added export of config to enable use of find_package()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,7 @@ set_target_properties(kernel_helper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE
 
 add_executable(convert_kernel src/convert_kernel.c include/convert_kernel.h src/kernel_helper.c include/kernel_helper.h)
 set_target_properties(convert_kernel PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+
+install(TARGETS kernel_helper EXPORT KernelHelperConfig ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+export(TARGETS kernel_helper NAMESPACE kernel_helper:: FILE "${CMAKE_CURRENT_BINARY_DIR}/KernelHelperConfig.cmake")
+install(EXPORT KernelHelperConfig DESTINATION "${CMAKE_INSTALL_DATADIR}/KernelHelper/cmake" NAMESPACE kernel_helper::)
