Ensure CMake knows we're compiling C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.24)
-project(kernel_helper)
-
-set(CMAKE_CXX_STANDARD 23)
+project(kernel_helper C)
 
 add_library(kernel_helper STATIC src/kernel_helper.c)
 set_target_properties(kernel_helper PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
